--- a/src/assets/scss/dashboard/LastPlayed.scss
+++ b/src/assets/scss/dashboard/LastPlayed.scss
@@ -5,18 +5,17 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 30px;
   display: flex;
-}
+  align-items: center;
+  .gameImg {
+    width: 60px;
+    height: 60px;
+  }
 
-.gameImg {
-  margin-left: -8px;
-  width: 70px;
-  height: 85px;
-}
-
-.palyInfo {
-  display: inline-block;
-  vertical-align: super;
-  width: 210px;
+  .palyInfo {
+    display: inline-block;
+    vertical-align: super;
+     margin-left: 20px;   
+  }
 }
 
 /* Dark theme styles */
