--- a/src/assets/scss/dashboard/dashboard.scss
+++ b/src/assets/scss/dashboard/dashboard.scss
@@ -1,4 +1,3 @@
-
 .control_panel {
   transition: background 0.5s, color 0.5s;
   display: flex;
@@ -39,7 +38,6 @@
   width: 300px;
   left: 71vw;
   top: 20px;
-  font-family: "Arial";
   font-size: 32px;
   text-align: right;
 }
@@ -57,6 +55,27 @@
   gap: 20px;
   overflow-x: scroll;
   width: 1365px;
+  padding-bottom: 20px;
+
+  /* width */
+  &::-webkit-scrollbar {
+    height: 5px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: #e76b6b;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: #e7cc6d;
+  }
 }
 
 .game {
@@ -80,6 +99,7 @@
 .last_played {
   margin-left: 5px;
   font-size: 30px;
+  margin-bottom: 20px;
 }
 
 .last_games {
@@ -95,6 +115,7 @@
 .tropyh_title {
   font-size: 30px;
   margin-left: 40px;
+  margin-bottom: 20px;
 }
 
 .trophy_img {
@@ -126,7 +147,6 @@
   width: 245px;
   left: 180px;
   top: 8px;
-  font-family: "Arial";
   font-weight: 700;
   font-size: 16px;
   line-height: -31px;
@@ -145,7 +165,6 @@
   position: absolute;
   width: 520px;
   top: 196px;
-  font-family: "Arial";
   font-weight: 600;
   font-size: 25px;
   line-height: 31px;
@@ -167,9 +186,9 @@
 }
 
 .friends p {
-  font-family: "Arial";
   font-weight: 600;
-  font-size: 35px;
+  font-size: 30px;
+  margin-bottom: 20px;
 }
 
 .btn_theme {
